# dear-diarizer

./: .gitignore  CLAUDE.md  GEMINI.md  SWEEP_INSTRUCTIONS.md  main.py  pyproject.toml
.beads/: issues.jsonl
configs/: generator-deltanet.yaml  generator-mamba2.yaml  h100-batch256.yaml  spark-batch128-conservative.yaml  spark-batch128.yaml  spark-batch256.yaml  spark-conservative.yaml  tpu-v6e-batch128.yaml
configs/encoder-collapse-sweep/: spark-batch128-conservative-encsig0p0.yaml  spark-batch128-conservative-encsig0p05-dgx-lr2p0e-4-wu10k.yaml  spark-batch128-conservative-encsig0p05.yaml  spark-batch128-conservative-encsig0p1-sweep.yaml  spark-batch128-conservative-encsig0p1.yaml  spark-batch128-conservative-encsig0p2.yaml  spark-batch256-conservative-encsig0p05-dgx-lr2p0e-4-wu10k.yaml  spark-batch256-conservative-encsig0p05-rtx6000pro.yaml  spark-batch384-conservative-encsig0p05-rtx6000pro-lr1p8e-4-wu10k.yaml  spark-batch384-conservative-encsig0p05-rtx6000pro-lr2p0e-4-wu10k.yaml  spark-batch384-conservative-encsig0p05-rtx6000pro-lr2p2e-4-wu10k.yaml  spark-batch384-conservative-encsig0p05-rtx6000pro.yaml  (+1 more)
docs/: generator_design.md  training_setup.md
evals/: __init__.py
generator/: __init__.py  attractor.py  config.py  energy.py  losses.py  mamba.py  refinement.py  regularization.py  ssd.py  synthetic.py  train.py
jax_gated_deltanet/: __init__.py  config.py  conv.py  deltanet.py  layers.py  norm.py
scraper/: apple_podcasts.py  database.py  downloader.py  main.py
scripts/: analyze_wandb_invariance.py  setup_vm.sh  upload_shards.sh
wavlejepa/: __init__.py  context_encoder.py  data.py  losses.py  model.py  predictor.py  prepare_shards.py  projector.py  sigreg.py  train.py  waveform_encoder.py
(+41 files in other folders)
