[project]
name = "dear"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "equinox>=0.13.2",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "jax>=0.8.2",
    "jaxtyping>=0.3.5",
    "librosa>=0.11.0",
    "mamba2-jax>=0.1.1",
    "optax>=0.2.6",
    "orbax-checkpoint>=0.11.31",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.6.0",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
    "webdataset>=1.0.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0.0",
    "ruff>=0.14.11",
]
cuda = [
    "jax[cuda12]>=0.8.2",
]
tpu = [
    "jax[tpu]>=0.8.2",
]

[tool.ruff.lint]
ignore = [
    "F722",  # jaxtyping uses strings in annotations like Float[Array, "batch time"]
    "F821",  # jaxtyping dimension names appear as undefined (e.g., "time")
]
